# midnight-widgets

./: Makefile.am  acinclude.m4  autogen.sh  configure.ac
lib/: Makefile.am
lib/widgets/: Makefile.am  group.c  group.h  rect.h  widget.c  widget.h
m4.include/: ac-glib.m4
src/: Makefile.am  widget-group-debug.c
tests/lib/: Makefile.am
tests/lib/widgets/: Makefile.am  widget_group.c
